# roboy_ros_face

./: CMakeLists.txt  README.md  package.xml
data/: angry.xspf  openVideo.sh  shy.xspf  smiling.xspf
data/Video1/: playlist
launch/: roboy_ros_face.launch
src/: neutral_face.sh  roboy_ros_face_node.cpp  test_client.cpp
srv/: PlayEmotionSrv.srv
